--- a/Discover/curso-node-ejs/views/index.ejs
+++ b/Discover/curso-node-ejs/views/index.ejs
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   
-    <title>Construindo com EJS</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"/>
-    <style>
-        body{
-            padding-top: 50px;
-        }
-    </style>
 
-</head>
-<body class="container">
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/"> EJS </a>
-        </nav>
-    </header>
+   <%- include('head'); %>
 
-    <main>
-        <div class="jumbotron">
-            <h1> Node com EJS </h1>
-            <p> Vamos aprender a trabalhar com arquivos EJS </p>
-        </div>
-    </main>
-
-    <footer>
-        <p class="text-center text-muted"> Feito por Diego Santos Lima </p>
-    </footer>
-</body>
+    <body class="container">
+         <%- include('header'); %> 
+      <main>
+            <div class="jumbotron">
+                <h1> Node com EJS </h1>
+                <p> Vamos aprender a trabalhar com arquivos EJS </p>
+            </div>
+        </main>
+        <%- include('footer'); %> 
+    </body>
 </html>
