--- a/Discover/curso-node-ejs/views/pages/about.ejs
+++ b/Discover/curso-node-ejs/views/pages/about.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<%- include('head'); %>
+<%- include('../partials/head'); %>
 
 <body class="container">
-       <%- include('header'); %>
+       <%- include('../partials/header' , { pagina: 'sobre'}); %>
        
        <main>
            <div class="jumbotron">
@@ -14,7 +14,7 @@
            </div>
        </main>
 
-       <%- include('footer'); %>
+       <%- include('../partials/footer'); %>
 
 </body>
 </html>
