--- a/Discover/curso-node-ejs/views/pages/index.ejs
+++ b/Discover/curso-node-ejs/views/pages/index.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-   <%- include('head'); %>
+   <%- include('../partials/head'); %>
 
     <body class="container">
-         <%- include('header'); %> 
+         <%- include('../partials/header', {pagina:'Home'} ); %> 
       <main>
             <div class="jumbotron">
                 <h1> Node com EJS </h1>
                 <p> Vamos aprender a trabalhar com arquivos EJS </p>
             </div>
         </main>
-        <%- include('footer'); %> 
+        <%- include('../partials/footer'); %> 
     </body>
 </html>
