--- a/Discover/curso-node-ejs/views/pages/index.ejs
+++ b/Discover/curso-node-ejs/views/pages/index.ejs
@@ -8,7 +8,21 @@
             <div class="jumbotron">
                 <h1> Node com EJS </h1>
                 <p> Vamos aprender a trabalhar com arquivos EJS </p>
+                <p><%= subtitle %></p>
             </div>
+
+            <ul>
+                <% qualitys.forEach(function(a){ %>
+
+                     <li>
+                        <strong><%= a.title %></strong> <%= a.message %>
+                    
+                     </li>
+
+               <% })%>
+               
+            </ul>
+
         </main>
         <%- include('../partials/footer'); %> 
     </body>
